# ghlang

./: .SRCINFO  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  __init__.py  config.example.toml  env.example  main.py  pyproject.toml  ruff.toml  setup.py  ty.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  emit-version.yml  publish-aur.yml  publish-pypi.yml  publish.yml  release.yml  welcome.yml
.github/workflows/scripts/: cibw_before_build.ps1  cibw_before_build.sh  copy_tokount_binary.py  extract_changelog.sh  update-sha256.sh  update_sha256.sh  update_version.sh  wheel_smoke_test.py
assets/: badge.json
docker/: ci_all.sh  ci_aur.Dockerfile  ci_aur.sh  ci_linux.Dockerfile  ci_linux.sh
ghlang/: __init__.py  build_hooks.py  cli.py  cloc_client.py  colors.py  config.py  constants.py  default_config.toml  exceptions.py  github_client.py  languages.py  log.py  platforms.py  themes.py  tokount_client.py  utils.py  visualizers.py
ghlang/cli/: __init__.py  charts.py  config.py  github.py  local.py  theme.py  utils.py
ghlang/display/: __init__.py  config.py  themes.py
ghlang/net/: __init__.py  client.py  github.py  linguist.py
ghlang/static/: lang_mapping.json  lang_mapping.py  languages.py
ghlang/static/fonts/: __init__.py
ghlang/styles/: __init__.py  bar.py  pie.py  pixel.py  utils.py
github_stats/: github_client.py
scripts/: bench_chart.py  bench_data.py  benchmark.sh  build_local.sh  clean.sh  dev_local.sh
tests/: conftest.py  test_cli_utils.py  test_config.py  test_github_client.py  test_net_client.py  test_themes.py
tests/fixtures/: configs.toml  cpython_languages.json  custom_themes.json  linux_languages.json  remote_themes.json  rust_languages.json
themes/: README.md  manifest.json
tokount/: Cargo.toml
tokount/src/: main.rs
