[package]
name = "tokount"
version = "1.0.0"
description = "Fast line counter using tokei"
authors = ["MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokei = "14.0.0"

[[bin]]
name = "tokount"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
fn_params_excessive_bools = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
redundant_closure_for_method_calls = "warn"
redundant_clone = "warn"
